Added Player's endpoints and logic, for Player Listing with params and detail
